chore: migrate to JDK 25